--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Loco-or-Love_66722
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66722-h/images/cover.jpg
 creator:
   author:
     agent_name: Tuttle, W. C. (Wilbur C.)
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/52836
     wikipedia: https://en.wikipedia.org/wiki/W._C._Tuttle
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66722#Loco-or-Love
 gutenberg_issued: '2021-11-13'
 identifiers:
   gutenberg: '66722'
